# lib_media

./: README.md  build.gradle  settings.gradle
api_media/: build.gradle
api_media/src/androidTest/java/com/qiyei/android/media/api/: ExampleInstrumentedTest.kt
api_media/src/main/: AndroidManifest.xml
api_media/src/main/java/com/qiyei/android/media/api/: CameraUtils.java  CodecCallBack.java  DecoderCallBack.java  EncoderCallBack.java  HardwareStatus.java  ICamera1Api.java  ICamera2Api.java  ICameraApi.java  IDecoder.java  IEncoder.java  IMediaCodecEncoder.java  MediaConstant.java  MediaMuxerListener.java  MediaUtils.java
api_media/src/test/java/com/qiyei/android/media/api/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/qiyei/android/media/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/qiyei/android/media/app/: MainActivity.kt
app/src/main/java/com/qiyei/android/media/app/camera/: Camera1Loader.kt  Camera2Loader.kt  CameraLoader.kt
app/src/main/java/com/qiyei/android/media/app/entity/: MainMenu.java
app/src/main/java/com/qiyei/android/media/app/ext/: ImageExt.kt  ViewExt.kt
app/src/main/java/com/qiyei/android/media/app/extend/: CommonExtend.kt
app/src/main/java/com/qiyei/android/media/app/listener/: CommonListClickListener.java
app/src/main/java/com/qiyei/android/media/app/util/: CameraHelper.java
app/src/main/java/com/qiyei/android/media/app/vm/: CommonListViewModel.java
app/src/main/res/drawable/: recyclerview_decoration.xml
app/src/main/res/drawable-v24/: bg_capture_video_button.xml
app/src/main/res/layout/: activity_camera1_demo.xml  activity_camera2_demo.xml  activity_camera_demo.xml  activity_h262_media_codec_decoder_demo.xml  activity_h264_media_codec_demo.xml  activity_media_muxer_demo.xml  recyclerview_main_menu_item.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qiyei/android/media/app/: ExampleUnitTest.kt
lib_camera/: build.gradle
lib_camera/src/androidTest/java/com/qiyei/android/camera/lib/: ExampleInstrumentedTest.kt
lib_camera/src/main/: AndroidManifest.xml
lib_camera/src/main/java/com/qiyei/android/camera/lib/: CameraActivity.kt  CameraFragment.kt
lib_camera/src/test/java/com/qiyei/android/camera/lib/: ExampleUnitTest.kt
lib_ffmpeg/: build.gradle
lib_ffmpeg/libs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libswresample.pc  libswscale.pc
lib_ffmpeg/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libswresample.pc  libswscale.pc
lib_ffmpeg/libs/x86/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libswresample.pc  libswscale.pc
lib_ffmpeg/libs/x86_64/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libswresample.pc  libswscale.pc
lib_ffmpeg/src/androidTest/java/com/qiyei/android/media/ffmpeg/lib/: ExampleInstrumentedTest.kt
lib_ffmpeg/src/main/: AndroidManifest.xml
lib_ffmpeg/src/main/cpp/: CMakeLists.txt
lib_ffmpeg/src/main/cpp/encode/: encode_jpeg.cpp  encode_mp4.cpp
lib_ffmpeg/src/main/java/com/qiyei/android/media/ffmpeg/lib/: FFmpegImpl.java
lib_ffmpeg/src/test/java/com/qiyei/android/media/ffmpeg/lib/: ExampleUnitTest.kt
lib_media/: build.gradle
lib_media/src/androidTest/java/com/qiyei/android/media/lib/: ExampleInstrumentedTest.kt
lib_media/src/main/: AndroidManifest.xml
lib_media/src/main/cpp/: CMakeLists.txt  yuv.cpp
lib_media/src/main/java/com/qiyei/android/media/lib/: AudioRecordLoader.java  Camera1Impl.java  Camera1Proxy.java  CameraProxy.java  CameraXImpl.java  YUVUtils.java
lib_media/src/main/java/com/qiyei/android/media/lib/codec/: AACMediaCodecEncoder.java  AbsEncoder.java  AbsMediaCodecEncoder.java  H264MediaCodecAsyncEncoder.java  H264MediaCodecEncoder.java  Mp4MediaCodecRecord.java
lib_media/src/main/java/com/qiyei/android/media/lib/decoder/: AbsDecoder.java  AbsMediaCodecDecoder.java  CustomMediaExtractor.java  CustomMediaMuxer.java  H264MediaCodecDecoder.java  H264VideoMediaCodecDecoder.java  MediaCodecDecoder.java
lib_media/src/main/java/com/qiyei/android/media/lib/encoder/: AACMediaCodecEncoder.java  AbsEncoder.java  AbsMediaCodecEncoder.java  AudioRecordLoader.java  H264MediaCodecAsyncEncoder.java  H264MediaCodecEncoder.java  Mp4MediaEncoderRecord.java
lib_media/src/test/java/com/qiyei/android/media/lib/: ExampleUnitTest.kt
(+23 files in other folders)
